# nolawi-bounty-hub

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  Makefile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2e1571b38603_update_submission_table.py  300594f19f1a_add_paymentstatus_enum.py  384455ad1d23_add_user_table.py  606cbb44e359_update_user_email.py  7c2dd8df02d2_use_program_id_in_submissions.py  7cf0e937803d_add_name_field_to_users.py  85bf42c8546e_remove_participant_name_unqiue.py  8b05fabb5e3d_add_payment_table.py  9a5ecf8f348a_add_tables_participant_payment.py  9db4a05fc902_remove_unique_constriant_from_submission.py  a0bf516ac0c6_add_tables.py  ce7d5436daea_add_bountyprogram_table.py  ff5a98e6d468_add_on_delete_cascade_for_tables.py
backend/app/: config.py  db.py  main.py
backend/app/cache/: cache_decorator.py  redis_client.py
backend/app/models/: bountyprogram.py  participant.py  payment.py  submission.py  user.py
backend/app/routes/: bountyprogram_routes.py  participant_routes.py  payment_routes.py  submission_routes.py  user_routes.py
backend/app/services/: bountyprogram_service.py  participant_service.py  payment_service.py  submission_service.py  user_service.py
frontend/: mdx-components.tsx  next.config.ts  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: add-program-modal.tsx  admin-dashboard.tsx  alert.tsx  company-dashboard.tsx  footer.tsx  hacker-dashboard.tsx  loading.tsx  login-form.tsx  page-loading.tsx  program-admin-item.tsx  (+8 more)
(+50 files in other folders)
